Fix a couple layout bugs

--- a/CheckersWebsite/wwwroot/css/bundle.css
+++ b/CheckersWebsite/wwwroot/css/bundle.css
@@ -6807,6 +6807,7 @@ button.btn-link {
     height: 60px;
 }
 
+.center-col,
 .board-col {
     z-index: 99;
     padding: 0;
